--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>hello!</h1>
 <hr>
 <h2>I am a Penguin</h2>
-<img src="penguin.jpg" width="300" height="300" alt="penguin"/>
+<img src="images/penguin.jpg" width="300" height="300" alt="penguin"/>
 <h3>I like to eat fish</h3>
 </body>
 </html>
