Update index.html to modify penguin details
Removed the image width and height attributes, added an 'About Penguin' section.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<title>I love Penguins</title>
-</head>
-<body>
-<h1>hello!</h1>
-<hr>
-<h2>I am a Penguin</h2>
-<img src="image/Profile.jpeg" width="300" height="300" alt="penguin"/>
-<h3>I like to eat fish</h3>
-</body>
+  <head>
+    <title>I love Penguins</title>
+  </head>
+  <body>
+    <h1>hello!</h1>
+    <hr>
+    <h2>I am a Penguin</h2>
+    <img src="Profile.jpeg"
+    <h2>About Penguin</h2>
+  </body>
 </html>
