--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <h1>hello!</h1>
     <hr>
     <h2>I am a Penguin</h2>
-    <img src="Profile.jpeg"
+    <img src="Profile.jpeg" width="240" height="300" alt="penguin photo"/>
     <h2>About Penguin</h2>
+    <p>Penguin likes to eat fish</p>
+    <p>Penguin loves to:</p>
+    <ol>
+      <li>write</li>
+      <li>code</li>
+      <li>sleep</li>
+    </ol>
   </body>
 </html>
